--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
+:root {
+  --red: #f77e82;
+  --green: #08817d;
+}
+
+body { padding: 0 1em; }
+
 .grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr;
-  grid-column-gap: 0px;
+  grid-column-gap: 4em;
   grid-row-gap: 0px;
 }
+
+table {width: 100%; }
 
 table, tr, td {
   border: 1px solid #333;
@@ -18,8 +27,14 @@ thead td {
   text-transform: uppercase;
 }
 
-tr.debit { background-color: #f77e82; }
+tr.debit { background-color: var(--red); }
 
-tr.credit { background-color: #08817d; color: #fff; }
+tr.credit { background-color: var(--green); color: #fff; }
 
 td { padding: .15em 1em; }
+
+h1 {  }
+
+h3, h4 { margin: 0; }
+
+h4 { font-style: italic; }
